# installer-framework

./: .gitignore  .qmake.conf  3RDPARTY  CMakeLists.txt  Changelog  INSTALL  README  installerfw.pri  installerfw.pro  installerfw.sln  licenseRule.json  no_app_bundle.pri
LICENSES/: LicenseRef-Qt-Commercial.txt  Qt-GPL-exception-1.0.txt
coin/: dependencies.yaml
coin/instructions/: make_check_instructions.yaml  make_instructions.yaml  qmake_module_build.yaml
doc/: doc.pri  doc_targets.pri  fixnavi.pl  installerfw-cpp-classes.qdoc  installerfw-examples.qdoc  installerfw-getting-started.qdoc  installerfw-overview.qdoc  installerfw-reference.qdoc  installerfw-using.qdoc  installerfw.qdoc  messageboxhandler.qdoc  noninteractive.qdoc  operations.qdoc  scripting-qmlmodule.qdoc  scripting.qdoc  systeminfo.qdoc  tutorial.qdoc
doc/config/: ifw.qdocconf
doc/scripting-api/: buttons.qdoc  component.qdoc  console.qdoc  gui.qdoc  packagemanagercore.qdoc  print.qdoc  qdesktopservices.qdoc  qfiledialog.qdoc  qinstaller.qdoc  qsettings.qdoc
examples/: examples.pro
examples/doc/: changeuserinterface.qdoc  componentalias.qdoc  componenterror.qdoc  dependencies.qdoc  dynamicpage.qdoc  hidecheckbox.qdoc  modifyextract.qdoc  online.qdoc  openreadme.qdoc  productimage.qdoc  quitinstaller.qdoc  registerfileextension.qdoc  repositorycategories.qdoc  startmenu.qdoc  stylesheet.qdoc  systeminfo.qdoc  translations.qdoc  treename.qdoc
examples/dynamicpage/: dynamicpage.pro
examples/registervirtualcomponentforuninstall/config/: controller.qs
examples/repositorycategories/: repositorycategories.pro
examples/startmenu/: startmenu.pro
src/: src.pro  src.sln
src/libs/: libs.pro  libs.sln
src/libs/7zip/: 7z.vcxproj  7z.vcxproj.filters  CMakeLists.txt
src/libs/7zip/unix/CPP/Common/: MyString.cpp
src/libs/7zip/win/CPP/7zip/UI/Common/: Update.cpp
src/libs/ifwtools/: binarycreator.cpp  binarycreator.h  binarydump.cpp  binarydump.h  ifwtools.pri  ifwtools_global.h  repositorygen.cpp  repositorygen.h
src/libs/ifwtools/rcc/: qcorecmdlineargs_p.h  rcc.cpp  rcc.h  rccmain.cpp
src/libs/ifwtools/resources/: copylibsintobundle.sh
src/libs/installer/: CMakeLists.txt  CreateDockIconOperation.h  CreateDockIconOperation.mm  VectorWizard.cpp  VectorWizard.h  abstractarchive.cpp  abstractarchive.h  abstractfiletask.cpp  abstractfiletask.h  abstracttask.cpp  abstracttask.h  adminauthorization.h  adminauthorization_mac.cpp  adminauthorization_win.cpp  adminauthorization_x11.cpp  archivefactory.cpp  archivefactory.h  aspectratiolabel.cpp  aspectratiolabel.h  binarycontent.cpp  binarycontent.h  binaryformat.cpp  binaryformat.h  binaryformatengine.cpp  binaryformatengine.h  binaryformatenginehandler.cpp  binaryformatenginehandler.h  binarylayout.cpp  binarylayout.h  calculatorbase.cpp  calculatorbase.h  categorycombobox.cpp  categorycombobox.h  checkablecombobox.cpp  checkablecombobox.h  clickablelabel.cpp  clickablelabel.h  commandlineparser.cpp  commandlineparser.h  commandlineparser_p.cpp  (+200 more)
src/libs/installer/resources/: installer.qrc
src/libs/kdtools/: environment.cpp  environment.h  filedownloader.cpp  filedownloader.h  filedownloader_p.h  filedownloaderfactory.cpp  filedownloaderfactory.h  genericfactory.cpp  genericfactory.h  job.cpp  job.h  kdrunoncechecker.h  kdsysinfo_win.cpp  kdtools.pri  kdtoolsglobal.h  kdupdaterupdatefinder.cpp  localpackagehub.cpp  localpackagehub.h  lockfile.cpp  lockfile.h  lockfile_p.h  lockfile_unix.cpp  lockfile_win.cpp  runoncechecker.cpp  runoncechecker.h  selfrestarter.cpp  selfrestarter.h  sysinfo.cpp  sysinfo.h  sysinfo_mac.cpp  sysinfo_x11.cpp  task.cpp  task.h  update.cpp  update.h  updatefinder.cpp  updatefinder.h  updateoperation.cpp  updateoperation.h  updateoperationfactory.cpp  (+8 more)
src/sdk/: CMakeLists.txt  aboutapplicationdialog.cpp  aboutapplicationdialog.h  commandlineinterface.cpp  commandlineinterface.h  installerbase.cpp  installerbase.h  installerbase.rc  installerbase.vcxproj  installerbase.vcxproj.filters  installerbasecommons.cpp  installerbasecommons.h  main.cpp  sdk.pro  sdkapp.h  settingsdialog.cpp  settingsdialog.h  tabcontroller.cpp  tabcontroller.h
src/sdk/translations/: de.qm  fr.qm  ifw_ar.ts  ifw_de.ts  ifw_es.ts  ifw_fr.ts  ifw_ja.ts  ifw_ko.ts  ifw_pl.ts  ifw_pt_PT.ts  ifw_ru.ts  ifw_sv.ts  ifw_zh_CN.ts  it.qm  ja.qm  pl.qm  ru.qm  translations.pro  zh_cn.qm
tests/: tests.pro
tests/auto/: auto.pro  qttest.pri
tests/auto/installer/: installer.pro
tests/auto/installer/appendfileoperation/: appendfileoperation.pro  settings.qrc  tst_appendfileoperation.cpp
tests/auto/installer/archivefactory/: archivefactory.pro  tst_archivefactory.cpp
tests/auto/installer/binaryformat/: binaryformat.pro  tst_binaryformat.cpp
tests/auto/installer/brokeninstaller/: brokeninstaller.pro  tst_brokeninstaller.cpp
tests/auto/installer/clientserver/: clientserver.pro  tst_clientserver.cpp
tests/auto/installer/commandlineinstall/: commandlineinstall.pro  settings.qrc  tst_commandlineinstall.cpp
tests/auto/installer/task/: task.pro  (+1 more)
tests/auto/tools/: tools.pro
tools/: build_installer.py  tools.pro  tools.sln
tools/archivegen/: CMakeLists.txt  archive.cpp  archivegen.pro  archivegen.vcxproj  archivegen.vcxproj.filters
tools/binarycreator/: CMakeLists.txt  binarycreator.pro  binarycreator.vcxproj  binarycreator.vcxproj.filters  main.cpp
tools/checksumgenerator/: checksumgenerator.pro  main.cpp
tools/devtool/: CMakeLists.txt  binaryreplace.cpp  binaryreplace.h  devtool.pro  devtool.vcxproj  devtool.vcxproj.filters  main.cpp  operationrunner.cpp  operationrunner.h
tools/repocompare/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  repocompare.pro  repocompare.vcxproj  repocompare.vcxproj.filters  repositorymanager.cpp  repositorymanager.h
tools/repogen/: CMakeLists.txt  repogen.cpp  repogen.pro  repogen.vcxproj  repogen.vcxproj.filters
tools/uninstallermaker/: CMakeLists.txt  uninstallermaker.cpp  uninstallermaker.pro  uninstallermaker.vcxproj  uninstallermaker.vcxproj.filters
tools/updater/: updater.cpp  updater.pro
(+272 files in other folders)
